site/api/4.09/compilerlibref/index_types.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.09</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Index of types</a></div><ul></ul></nav></header>

<h1>Index of types</h1>
<table>
<tbody><tr><td align="left"><div>A</div></td></tr>
<tr><td><a href="Warnings.html#TYPEalert">alert</a> [<a href="Warnings.html">Warnings</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.html#TYPEalerts">alerts</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEarg_label">arg_label</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Pparse.html#TYPEast_kind">ast_kind</a> [<a href="Pparse.html">Pparse</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEattribute">attribute</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEattributes">attributes</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.html#TYPEattrs">attrs</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td></td></tr>
<tr><td align="left"><div>B</div></td></tr>
<tr><td><a href="Parsetree.html#TYPEbinding_op">binding_op</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Depend.html#TYPEbound_map">bound_map</a> [<a href="Depend.html">Depend</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.ErrorReports.html#TYPEbuffer">buffer</a> [<a href="CamlinternalMenhirLib.ErrorReports.html">CamlinternalMenhirLib.ErrorReports</a>]</td>
<td></td></tr>
<tr><td align="left"><div>C</div></td></tr>
<tr><td><a href="Parsetree.html#TYPEcase">case</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START.html#TYPEcheckpoint">checkpoint</a> [<a href="CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START.html">CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPEcheckpoint">checkpoint</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_declaration">class_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_description">class_description</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_expr">class_expr</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_expr_desc">class_expr_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_field">class_field</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_field_desc">class_field_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_field_kind">class_field_kind</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_infos">class_infos</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_signature">class_signature</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_structure">class_structure</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_type">class_type</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_type_declaration">class_type_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_type_desc">class_type_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_type_field">class_type_field</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEclass_type_field_desc">class_type_field_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEclosed_flag">closed_flag</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Color.html#TYPEcolor">color</a> [<a href="Misc.Color.html">Misc.Color</a>]</td>
<td></td></tr>
<tr><td><a href="Profile.html#TYPEcolumn">column</a> [<a href="Profile.html">Profile</a>]</td>
<td></td></tr>
<tr><td><a href="Strongly_connected_components.S.html#TYPEcomponent">component</a> [<a href="Strongly_connected_components.S.html">Strongly_connected_components.S</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEconstant">constant</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEconstant">constant</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEconstructor_arguments">constructor_arguments</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEconstructor_declaration">constructor_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEcore_type">core_type</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEcore_type_desc">core_type_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.html#TYPEcrcs">crcs</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td align="left"><div>D</div></td></tr>
<tr><td><a href="Strongly_connected_components.S.html#TYPEdirected_graph">directed_graph</a> [<a href="Strongly_connected_components.S.html">Strongly_connected_components.S</a>]</td>
<td><div class="info">
<p>If (a -&gt; set) belongs to the map, it means that there are edges
      from <code class="code">a</code> to every element of <code class="code">set</code>.</p>

</div>
</td></tr>
<tr><td><a href="Asttypes.html#TYPEdirection_flag">direction_flag</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEdirective_argument">directive_argument</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEdirective_argument_desc">directive_argument_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Docstrings.html#TYPEdocs">docs</a> [<a href="Docstrings.html">Docstrings</a>]</td>
<td></td></tr>
<tr><td><a href="Docstrings.html#TYPEdocstring">docstring</a> [<a href="Docstrings.html">Docstrings</a>]</td>
<td><div class="info">
<p>Documentation comments</p>

</div>
</td></tr>
<tr><td align="left"><div>E</div></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPEelement">element</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.html#TYPEenv">env</a> [<a href="CamlinternalMenhirLib.EngineTypes.html">CamlinternalMenhirLib.EngineTypes</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html#TYPEenv">env</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html">CamlinternalMenhirLib.IncrementalEngine.INSPECTION</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPEenv">env</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.html#TYPEenv_reader">env_reader</a> [<a href="Clflags.html">Clflags</a>]</td>
<td></td></tr>
<tr><td><a href="Syntaxerr.html#TYPEerror">error</a> [<a href="Syntaxerr.html">Syntaxerr</a>]</td>
<td></td></tr>
<tr><td><a href="Pparse.html#TYPEerror">error</a> [<a href="Pparse.html">Pparse</a>]</td>
<td></td></tr>
<tr><td><a href="Location.html#TYPEerror">error</a> [<a href="Location.html">Location</a>]</td>
<td><div class="info">
<p>An <code class="code">error</code> is a <code class="code">report</code> which <code class="code">report_kind</code> must be <code class="code"><span class="constructor">Report_error</span></code>.</p>

</div>
</td></tr>
<tr><td><a href="Lexer.html#TYPEerror">error</a> [<a href="Lexer.html">Lexer</a>]</td>
<td></td></tr>
<tr><td><a href="Attr_helper.html#TYPEerror">error</a> [<a href="Attr_helper.html">Attr_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Build_path_prefix_map.html#TYPEerror_message">error_message</a> [<a href="Build_path_prefix_map.html">Build_path_prefix_map</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEexpression">expression</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEexpression_desc">expression_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEextension">extension</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEextension_constructor">extension_constructor</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEextension_constructor_kind">extension_constructor_kind</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td align="left"><div>F</div></td></tr>
<tr><td><a href="Profile.html#TYPEfile">file</a> [<a href="Profile.html">Profile</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.html#TYPEfilepath">filepath</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td align="left"><div>H</div></td></tr>
<tr><td><a href="CamlinternalMenhirLib.General.html#TYPEhead">head</a> [<a href="CamlinternalMenhirLib.General.html">CamlinternalMenhirLib.General</a>]</td>
<td></td></tr>
<tr><td align="left"><div>I</div></td></tr>
<tr><td><a href="Parsetree.html#TYPEinclude_declaration">include_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEinclude_description">include_description</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEinclude_infos">include_infos</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Docstrings.html#TYPEinfo">info</a> [<a href="Docstrings.html">Docstrings</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.html#TYPEinlining_arguments">inlining_arguments</a> [<a href="Clflags.html">Clflags</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html#TYPEitem">item</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html">CamlinternalMenhirLib.IncrementalEngine.INSPECTION</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_iterator.html#TYPEiterator">iterator</a> [<a href="Ast_iterator.html">Ast_iterator</a>]</td>
<td><div class="info">
<p>A <code class="code">iterator</code> record implements one "method" per syntactic category,
    using an open recursion style: each method takes as its first
    argument the iterator to be applied to children in the syntax
    tree.</p>

</div>
</td></tr>
<tr><td align="left"><div>L</div></td></tr>
<tr><td><a href="Asttypes.html#TYPElabel">label</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPElabel_declaration">label_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEletop">letop</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.html#TYPElid">lid</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Ccomp.html#TYPElink_mode">link_mode</a> [<a href="Ccomp.html">Ccomp</a>]</td>
<td></td></tr>
<tr><td><a href="Warnings.html#TYPEloc">loc</a> [<a href="Warnings.html">Warnings</a>]</td>
<td></td></tr>
<tr><td><a href="Location.html#TYPEloc">loc</a> [<a href="Location.html">Location</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEloc">loc</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.html#TYPEloc">loc</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.EnvLazy.html#TYPElog">log</a> [<a href="Misc.EnvLazy.html">Misc.EnvLazy</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Stdlib.List.html#TYPElongest_common_prefix_result">longest_common_prefix_result</a> [<a href="Misc.Stdlib.List.html">Misc.Stdlib.List</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.InspectionTableFormat.TABLES.html#TYPElr1state">lr1state</a> [<a href="CamlinternalMenhirLib.InspectionTableFormat.TABLES.html">CamlinternalMenhirLib.InspectionTableFormat.TABLES</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html#TYPElr1state">lr1state</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html">CamlinternalMenhirLib.IncrementalEngine.INSPECTION</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPElr1state">lr1state</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td align="left"><div>M</div></td></tr>
<tr><td><a href="Build_path_prefix_map.html#TYPEmap">map</a> [<a href="Build_path_prefix_map.html">Build_path_prefix_map</a>]</td>
<td></td></tr>
<tr><td><a href="Depend.html#TYPEmap_tree">map_tree</a> [<a href="Depend.html">Depend</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_mapper.html#TYPEmapper">mapper</a> [<a href="Ast_mapper.html">Ast_mapper</a>]</td>
<td><div class="info">
<p>A mapper record implements one "method" per syntactic category,
    using an open recursion style: each method takes as its first
    argument the mapper to be applied to children in the syntax
    tree.</p>

</div>
</td></tr>
<tr><td><a href="Misc.html#TYPEmodname">modname</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_binding">module_binding</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_declaration">module_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_expr">module_expr</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_expr_desc">module_expr_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_substitution">module_substitution</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_type">module_type</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_type_declaration">module_type_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEmodule_type_desc">module_type_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Location.html#TYPEmsg">msg</a> [<a href="Location.html">Location</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEmutable_flag">mutable_flag</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td align="left"><div>N</div></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.TABLE.html#TYPEnonterminal">nonterminal</a> [<a href="CamlinternalMenhirLib.EngineTypes.TABLE.html">CamlinternalMenhirLib.EngineTypes.TABLE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html#TYPEnonterminal">nonterminal</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html">CamlinternalMenhirLib.IncrementalEngine.SYMBOLS</a>]</td>
<td></td></tr>
<tr><td align="left"><div>O</div></td></tr>
<tr><td><a href="Parsetree.html#TYPEobject_field">object_field</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEobject_field_desc">object_field_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEopen_declaration">open_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEopen_description">open_description</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEopen_infos">open_infos</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEoverride_flag">override_flag</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td align="left"><div>P</div></td></tr>
<tr><td><a href="Parsetree.html#TYPEpackage_type">package_type</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Build_path_prefix_map.html#TYPEpair">pair</a> [<a href="Build_path_prefix_map.html">Build_path_prefix_map</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Float_arg_helper.html#TYPEparse_result">parse_result</a> [<a href="Clflags.Float_arg_helper.html">Clflags.Float_arg_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Int_arg_helper.html#TYPEparse_result">parse_result</a> [<a href="Clflags.Int_arg_helper.html">Clflags.Int_arg_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Arg_helper.Make.html#TYPEparse_result">parse_result</a> [<a href="Arg_helper.Make.html">Arg_helper.Make</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Float_arg_helper.html#TYPEparsed">parsed</a> [<a href="Clflags.Float_arg_helper.html">Clflags.Float_arg_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Int_arg_helper.html#TYPEparsed">parsed</a> [<a href="Clflags.Int_arg_helper.html">Clflags.Int_arg_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Arg_helper.Make.html#TYPEparsed">parsed</a> [<a href="Arg_helper.Make.html">Arg_helper.Make</a>]</td>
<td></td></tr>
<tr><td><a href="Build_path_prefix_map.html#TYPEpath">path</a> [<a href="Build_path_prefix_map.html">Build_path_prefix_map</a>]</td>
<td></td></tr>
<tr><td><a href="Build_path_prefix_map.html#TYPEpath_prefix">path_prefix</a> [<a href="Build_path_prefix_map.html">Build_path_prefix_map</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEpattern">pattern</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEpattern_desc">pattern_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEpayload">payload</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.html#TYPEposition">position</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.html">CamlinternalMenhirLib.IncrementalEngine</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEprivate_flag">private_flag</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.TABLE.html#TYPEproduction">production</a> [<a href="CamlinternalMenhirLib.EngineTypes.TABLE.html">CamlinternalMenhirLib.EngineTypes.TABLE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html#TYPEproduction">production</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INSPECTION.html">CamlinternalMenhirLib.IncrementalEngine.INSPECTION</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPEproduction">production</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td align="left"><div>R</div></td></tr>
<tr><td><a href="Asttypes.html#TYPErec_flag">rec_flag</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.html#TYPEref_and_value">ref_and_value</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Location.html#TYPEreport">report</a> [<a href="Location.html">Location</a>]</td>
<td></td></tr>
<tr><td><a href="Location.html#TYPEreport_kind">report_kind</a> [<a href="Location.html">Location</a>]</td>
<td></td></tr>
<tr><td><a href="Location.html#TYPEreport_printer">report_printer</a> [<a href="Location.html">Location</a>]</td>
<td><div class="info">
<p>A printer for <code class="code">report</code>s, defined using open-recursion.</p>

</div>
</td></tr>
<tr><td><a href="Warnings.html#TYPEreporting_information">reporting_information</a> [<a href="Warnings.html">Warnings</a>]</td>
<td></td></tr>
<tr><td><a href="Targetint.html#TYPErepr">repr</a> [<a href="Targetint.html">Targetint</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.Convert.html#TYPErevised">revised</a> [<a href="CamlinternalMenhirLib.Convert.html">CamlinternalMenhirLib.Convert</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPErow_field">row_field</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPErow_field_desc">row_field_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td align="left"><div>S</div></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.TABLE.html#TYPEsemantic_action">semantic_action</a> [<a href="CamlinternalMenhirLib.EngineTypes.TABLE.html">CamlinternalMenhirLib.EngineTypes.TABLE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START.html#TYPEsemantic_value">semantic_value</a> [<a href="CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START.html">CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE.html#TYPEsemantic_value">semantic_value</a> [<a href="CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE.html">CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.TABLE.html#TYPEsemantic_value">semantic_value</a> [<a href="CamlinternalMenhirLib.EngineTypes.TABLE.html">CamlinternalMenhirLib.EngineTypes.TABLE</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Error_style.html#TYPEsetting">setting</a> [<a href="Misc.Error_style.html">Misc.Error_style</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Color.html#TYPEsetting">setting</a> [<a href="Misc.Color.html">Misc.Color</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEsignature">signature</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEsignature_item">signature_item</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEsignature_item_desc">signature_item_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Pprintast.html#TYPEspace_formatter">space_formatter</a> [<a href="Pprintast.html">Pprintast</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.html#TYPEstack">stack</a> [<a href="CamlinternalMenhirLib.EngineTypes.html">CamlinternalMenhirLib.EngineTypes</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPEstack">stack</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="Warnings.html#TYPEstate">state</a> [<a href="Warnings.html">Warnings</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START.html#TYPEstate">state</a> [<a href="CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START.html">CamlinternalMenhirLib.EngineTypes.INCREMENTAL_ENGINE_START</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE.html#TYPEstate">state</a> [<a href="CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE.html">CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.TABLE.html#TYPEstate">state</a> [<a href="CamlinternalMenhirLib.EngineTypes.TABLE.html">CamlinternalMenhirLib.EngineTypes.TABLE</a>]</td>
<td></td></tr>
<tr><td><a href="Terminfo.html#TYPEstatus">status</a> [<a href="Terminfo.html">Terminfo</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.html#TYPEstr">str</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.General.html#TYPEstream">stream</a> [<a href="CamlinternalMenhirLib.General.html">CamlinternalMenhirLib.General</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEstructure">structure</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEstructure_item">structure_item</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEstructure_item_desc">structure_item_desc</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Color.html#TYPEstyle">style</a> [<a href="Misc.Color.html">Misc.Color</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Color.html#TYPEstyles">styles</a> [<a href="Misc.Color.html">Misc.Color</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPEsupplier">supplier</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html#TYPEsymbol">symbol</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html">CamlinternalMenhirLib.IncrementalEngine.SYMBOLS</a>]</td>
<td></td></tr>
<tr><td align="left"><div>T</div></td></tr>
<tr><td><a href="Warnings.html#TYPEt">t</a> [<a href="Warnings.html">Warnings</a>]</td>
<td></td></tr>
<tr><td><a href="Targetint.html#TYPEt">t</a> [<a href="Targetint.html">Targetint</a>]</td>
<td><div class="info">
<p>The type of target integers.</p>

</div>
</td></tr>
<tr><td><a href="Numbers.Int16.html#TYPEt">t</a> [<a href="Numbers.Int16.html">Numbers.Int16</a>]</td>
<td></td></tr>
<tr><td><a href="Numbers.Int8.html#TYPEt">t</a> [<a href="Numbers.Int8.html">Numbers.Int8</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.EnvLazy.html#TYPEt">t</a> [<a href="Misc.EnvLazy.html">Misc.EnvLazy</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.LongString.html#TYPEt">t</a> [<a href="Misc.LongString.html">Misc.LongString</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Stdlib.Option.html#TYPEt">t</a> [<a href="Misc.Stdlib.Option.html">Misc.Stdlib.Option</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Stdlib.List.html#TYPEt">t</a> [<a href="Misc.Stdlib.List.html">Misc.Stdlib.List</a>]</td>
<td></td></tr>
<tr><td><a href="Longident.html#TYPEt">t</a> [<a href="Longident.html">Longident</a>]</td>
<td></td></tr>
<tr><td><a href="Location.html#TYPEt">t</a> [<a href="Location.html">Location</a>]</td>
<td></td></tr>
<tr><td><a href="Load_path.Dir.html#TYPEt">t</a> [<a href="Load_path.Dir.html">Load_path.Dir</a>]</td>
<td><div class="info">
<p>Represent one directory in the load path.</p>

</div>
</td></tr>
<tr><td><a href="Identifiable.Tbl.T.html#TYPEt">t</a> [<a href="Identifiable.Tbl.T.html">Identifiable.Tbl.T</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.S.html#TYPEt">t</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.Thing.html#TYPEt">t</a> [<a href="Identifiable.Thing.html">Identifiable.Thing</a>]</td>
<td></td></tr>
<tr><td><a href="Consistbl.Make.html#TYPEt">t</a> [<a href="Consistbl.Make.html">Consistbl.Make</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Compiler_pass.html#TYPEt">t</a> [<a href="Clflags.Compiler_pass.html">Clflags.Compiler_pass</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.LinearizedArray.html#TYPEt">t</a> [<a href="CamlinternalMenhirLib.LinearizedArray.html">CamlinternalMenhirLib.LinearizedArray</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.PackedIntArray.html#TYPEt">t</a> [<a href="CamlinternalMenhirLib.PackedIntArray.html">CamlinternalMenhirLib.PackedIntArray</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.InfiniteArray.html#TYPEt">t</a> [<a href="CamlinternalMenhirLib.InfiniteArray.html">CamlinternalMenhirLib.InfiniteArray</a>]</td>
<td><div class="info">
<p>This module implements infinite arrays.</p>

</div>
</td></tr>
<tr><td><a href="CamlinternalMenhirLib.RowDisplacement.html#TYPEtable">table</a> [<a href="CamlinternalMenhirLib.RowDisplacement.html">CamlinternalMenhirLib.RowDisplacement</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.TABLE.html#TYPEterminal">terminal</a> [<a href="CamlinternalMenhirLib.EngineTypes.TABLE.html">CamlinternalMenhirLib.EngineTypes.TABLE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html#TYPEterminal">terminal</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html">CamlinternalMenhirLib.IncrementalEngine.SYMBOLS</a>]</td>
<td></td></tr>
<tr><td><a href="Docstrings.html#TYPEtext">text</a> [<a href="Docstrings.html">Docstrings</a>]</td>
<td></td></tr>
<tr><td><a href="Parser.html#TYPEtoken">token</a> [<a href="Parser.html">Parser</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.TableFormat.TABLES.html#TYPEtoken">token</a> [<a href="CamlinternalMenhirLib.TableFormat.TABLES.html">CamlinternalMenhirLib.TableFormat.TABLES</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE.html#TYPEtoken">token</a> [<a href="CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE.html">CamlinternalMenhirLib.EngineTypes.MONOLITHIC_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.EngineTypes.TABLE.html#TYPEtoken">token</a> [<a href="CamlinternalMenhirLib.EngineTypes.TABLE.html">CamlinternalMenhirLib.EngineTypes.TABLE</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html#TYPEtoken">token</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE.html">CamlinternalMenhirLib.IncrementalEngine.INCREMENTAL_ENGINE</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEtoplevel_directive">toplevel_directive</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEtoplevel_phrase">toplevel_phrase</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="CamlinternalMenhirLib.Convert.html#TYPEtraditional">traditional</a> [<a href="CamlinternalMenhirLib.Convert.html">CamlinternalMenhirLib.Convert</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEtype_declaration">type_declaration</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEtype_exception">type_exception</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEtype_extension">type_extension</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEtype_kind">type_kind</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td align="left"><div>V</div></td></tr>
<tr><td><a href="Parsetree.html#TYPEvalue_binding">value_binding</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Parsetree.html#TYPEvalue_description">value_description</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEvariance">variance</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td><a href="Asttypes.html#TYPEvirtual_flag">virtual_flag</a> [<a href="Asttypes.html">Asttypes</a>]</td>
<td></td></tr>
<tr><td align="left"><div>W</div></td></tr>
<tr><td><a href="Parsetree.html#TYPEwith_constraint">with_constraint</a> [<a href="Parsetree.html">Parsetree</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.html#TYPEwith_loc">with_loc</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td></td></tr>
<tr><td align="left"><div>X</div></td></tr>
<tr><td><a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html#TYPExsymbol">xsymbol</a> [<a href="CamlinternalMenhirLib.IncrementalEngine.SYMBOLS.html">CamlinternalMenhirLib.IncrementalEngine.SYMBOLS</a>]</td>
<td></td></tr>
</tbody></table>


<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>